                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 08-06-2005 updated: system headers to use with mingw 3.4.4 (USE GCC 3.4.4 OR HIGHER 3.4.x SERIES FROM NOW)
  - 08-06-2005 removed: unneeded video/audio filters
  - 08-06-2005 moved: xbmc hookup for audio into ao_directx instead of win32
  - 05-06-2005 fixed: player was resetting audio on each seak during ff/rw.. caused slowdowns
  - 22-05-2005 fixed: too fast playback immidiatly after resume from pause when autosync enabled.
  - 18-05-2005 fixed: subtitles didn't display in dvdimages if ttf subtitle fonts where selected in xbmc
  - 09-04-2005 new: support for returning amount of filled buffer to xbmc, and detect when buffer runs empty.
  - 09-04-2005 new: support for sending slave commands from xbmc to mplayer.
  - 09-04-2005 changed: made sure seeking didn't display progressbar of osd was turned of.
  - 02-04-2005 fixed: seeking and time reporting in mpg/vob files which has timecodes that doesn't start from zero
  - 27-03-2005 fixed: threading issue wich caused video to revert back to start when resuming from rewind
  - 17-03-2005 changed: reverted parts of last, syncing after ff/rw is now again done using a small seek. too many problems with it. Some other things tuned.
  - 08-03-2005 changed: reworked FF/RW, no skiping when returning to normal playback anymore. AV sync might be abit of, but should correct itself in a sec or two
  - 05-03-2005 changed: disbled ff/rw in files/streams that can't be seeked as this causes audio/video desync
  - 03-03-2005 fixed: using autosync cuaeses propblems when resuming from pause. (needs xbmc to call mplayer_ToFFRW(1))